feat!: exclude parameters column (#51)
* fix: exclude parameters column

* fix: exclude parameters column

* chore: fix: eslint

* chore: fix: eslint

* chore: fix Open API lint error

* chore: fix prettier errors

* chore: fix integration tests

* feat: fix tasks query param

* chore: fix eslint error

* chore: default value was added for tasks new query param

* chore: fix prettier

* chore: add missing integration test

* chore: fix prettier error

* chore: fix lint error

* chore: fix lint errors

* chore: fix build and push
