# openapi3.yaml
@@ -245,6 +245,7 @@ paths:
   /jobs/{jobId}/tasks:
     parameters:
       - $ref: '#/components/parameters/jobId'
+      - $ref: '#/components/parameters/shouldExcludeParameters'
     get:
       operationId: getTasks
       tags:
@@ -560,6 +561,13 @@ components:
       required: true
       schema:
         $ref: '#/components/schemas/jobId'
+    shouldExcludeParameters:
+      in: query
+      name: shouldExcludeParameters
+      description: Whether to exclude the 'parameters' column from the response
+      required: false
+      schema:
+        $ref: '#/components/schemas/shouldExcludeParameters'
     taskId:
       in: path
       name: taskId
@@ -785,6 +793,9 @@ components:
     jobId:
       type: string
       format: uuid
+    shouldExcludeParameters:
+      type: boolean
+      default: false
     taskId:
       type: string
       format: uuid
